clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service
  namespace: media
  # annotations:
    # metallb.universe.tf/address-pool: "worker-01ip"
    # external-dns.alpha.kubernetes.io/hostname: biggs.dog
spec:
  selector:
    app: jellyfin
  # externalTrafficPolicy: Local # testing 20260312
  ports:
    - name: jellyfin
      protocol: TCP
      port: 8096
      targetPort: 8096
    #  nodePort: 30096
#  type: NodePort
