clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  hostnames:
  - jellyfin.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: jellyfin-service
      port: 8096
    matches:
    - path:
        type: PathPrefix
        value: /
